linked script.js to  html file

--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 /* Name: style.css
-   Author: PUT-YOUR-NAME-HERE
+   Author: Disha Grover 
    Description: Styling for Flatland
    Version: 1.0
 */
